correct the dropdown menu colors to be visible on mobile

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -81,7 +81,8 @@ text-shadow:    none;
 /* Remove the Hover/Focus Colors  */
 .navbar .nav > li.current-menu-item > a, .navbar .nav > li.current-menu-ancestor > a,
 .navbar .nav > li > a:hover, .navbar .nav > li > a:focus {
-color:          #5A5A5A;
+  color:          #eee;
+  /*background-color: #307bdd; */
 }
 /* END OF Change the Navbar Colors/Font/Size */
 
@@ -112,7 +113,6 @@ color:          #5A5A5A;
 .top-nav>.open>a:hover,
 .top-nav>.open>a:focus {
     color: #fff;
-    background-color: #000;
 }
 
 .top-nav>.open>.dropdown-menu {
@@ -122,13 +122,19 @@ color:          #5A5A5A;
     border: 1px solid rgba(0,0,0,.15);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    background-color: #fff;
+    background-color: #307bbb;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
 
 .top-nav>.open>.dropdown-menu>li>a {
     white-space: normal;
+    color: #fff;
+}
+/* colors for the dropdown-menu */
+.top-nav>.open>.dropdown-menu a:hover,
+.top-nav>.open>.dropdown-menu a:focus{
+  background-color: #307bff;
 }
 
 ul.message-dropdown {
@@ -156,7 +162,7 @@ ul.alert-dropdown {
     width: 200px;
 }
 
-/* Side Navigation */
+/* Side Navigation
 
 @media(min-width:768px) {
     .side-nav {
@@ -199,6 +205,9 @@ ul.alert-dropdown {
 .side-nav>li>ul>li>a:hover {
     color: #fff;
 }
+
+*/
+
 
 /* Flot Chart Containers */
 
